# youtube-rss

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
config/: .env_example  config.yaml  env.py
youtube/: db.py  exeptions.py  google_api_auth.py  mong.py  rss.py  schemas.py  youtube.py  youtube_api.py
youtube/templates/: atom.jinja  auth.jinja  rss20.jinja
youtube/utils/: logger.py  utils.py
